# LayerCake

./: .buildinfo  .gitignore  LICENSE.txt  README.md  baroclinic_one_layer.py  barotropic_one_layer.py  environment.yml  environment_freethreading.yml  genindex.html  index.html  maooam.py  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test.py  test_with_another_field.py
.github/workflows/: checks.yml  pr-status.yml  sphinx_doc_to_gh_pages.yml
_modules/: index.html
_modules/layercake/arithmetic/: equation.html
_modules/layercake/bakery/: cake.html  layers.html
_modules/layercake/basis/: base.html  planar_fourier.html  spherical_harmonics.html
_sources/: index.rst.txt
_sources/files/: general_information.rst.txt  tricks.rst.txt  user_guide.rst.txt
documentation/source/: conf.py  index.rst
examples/atmospheric/: baroclinic_one_layer.py  barotropic_one_layer.py  marshall_molteni.py  statospheric_planetary_flow.py  stratospheric_planetary_flow.py  two_layer_quasi_geostrophic.py
examples/ocean-atmosphere/: maooam.py
files/: general_information.html  references.html  tricks.html  user_guide.html
files/technical/: arithmetic.html  bakery.html  basis.html  formatters.html  inner_products.html  utils.html  variables.html
layercake/: __init__.py
layercake/arithmetic/: equation.py  utils.py
layercake/bakery/: cake.py  layers.py
layercake/basis/: __init__.py  base.py  planar_fourier.py  spherical_harmonics.py
layercake/formatters/: base.py  fortran.py  julia.py  python.py
layercake/inner_products/: definition.py
layercake/utils/: __init__.py  commutativity.py  d.py  integration.py  matrix.py  operators.py  parallel.py  symbolic_tensor.py  tensor.py
layercake/variables/: coordinate.py  field.py  parameter.py  systems.py  utils.py  variable.py
test/: test_RP1982_qgs_numerical.py  test_RP1982_qgs_symbolic.py  test_base.py  test_maooam_qgs_numerical.py  test_maooam_qgs_symbolic.py
(+54 files in other folders)
